[package]
name = "opalserver"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/lib.rs"

[[bin]]
path = "src/main.rs"
name = "opalserver"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
actix-multipart = "0.4.0"
futures = "0.3.25"
handlebars = { version = "4.3.5", features = ["dir_source"] }
actix-files = "0.6.2"

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/bin/x86_64-w64-mingw32-ar"
